overlays/uksouth-prod/grafana/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
  name: grafana.${cluster_name}.${cluster_location}.bink.sh
  namespace: grafana
spec:
  rules:
    - host: grafana.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - grafana.${cluster_name}.${cluster_location}.bink.sh
